[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Tomas Haas <tomas.haas@rossum.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pydantic = "^2.5.2"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

